# pi-doctor

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MAINTAINERS.md  README.md  SECURITY.md  deny.toml  mkdocs.yml
.github/: dependabot.yml
crates/pi-doctor-bundle/: Cargo.toml
crates/pi-doctor-bundle/src/: error.rs  lib.rs
crates/pi-doctor-cli/: Cargo.toml
crates/pi-doctor-cli/pi-doctor-bundle-1776450648/: manifest.txt
crates/pi-doctor-cli/pi-doctor-bundle-1776451292/: manifest.txt
crates/pi-doctor-cli/pi-doctor-bundle-1776451517/: manifest.txt
crates/pi-doctor-cli/pi-doctor-bundle-1776451517/summary/: camera.txt  config.txt
crates/pi-doctor-cli/pi-doctor-bundle-1776451713/: manifest.txt
crates/pi-doctor-cli/pi-doctor-bundle-1776451713/summary/: system.txt
crates/pi-doctor-cli/pi-doctor-bundle-1776451905/: manifest.txt
crates/pi-doctor-cli/pi-doctor-bundle-1776451905/raw/camera/: inventory.txt
crates/pi-doctor-cli/pi-doctor-bundle-1776451905/summary/: gpio.txt  python.txt
crates/pi-doctor-cli/pi-doctor-bundle-1776452199/: manifest.txt  report.json
crates/pi-doctor-cli/pi-doctor-bundle-1776452199/raw/python/: summary.txt
crates/pi-doctor-cli/pi-doctor-bundle-1776452499/: manifest.txt  report.txt
crates/pi-doctor-cli/src/: error.rs  lib.rs  main.rs
crates/pi-doctor-cli/src/cli/: args.rs
crates/pi-doctor-cli/src/doctor/: camera.rs  gpio.rs
crates/pi-doctor-cli/src/explain/: config.rs  mod.rs  python.rs  throttling.rs
crates/pi-doctor-cli/src/output/: mod.rs
crates/pi-doctor-cli/tests/: cli_contract.rs  cli_snapshots.rs  hardware_matrix.rs  live_integration.rs  milestone1_fixtures.rs  milestone2_explain.rs  milestone3_config.rs  milestone4_gpio.rs  milestone5_camera.rs  milestone6_python.rs  milestone7_rollup.rs  performance_budget.rs
crates/pi-doctor-cli/tests/snapshots/: cli_snapshots__check_json_output.snap  cli_snapshots__help_output.snap  milestone2_explain__explain_throttling_active.snap  milestone2_explain__explain_throttling_missing_vcgencmd.snap  milestone3_config__explain_config_modern_layout.snap  milestone4_gpio__doctor_gpio_missing_tools.snap  milestone4_gpio__doctor_gpio_ready.snap  milestone5_camera__doctor_camera_missing_tools.snap  milestone5_camera__doctor_camera_no_cameras.snap  milestone5_camera__doctor_camera_ready.snap  milestone6_python__explain_python_active_venv.snap  milestone6_python__explain_python_externally_managed.snap  milestone7_rollup__mixed_report_human.snap  milestone7_rollup__mixed_report_json.snap
crates/pi-doctor-probes/: Cargo.toml
crates/pi-doctor-probes/src/: board.rs  camera.rs  config_txt.rs  error.rs  gpio.rs  kernel.rs  lib.rs  os.rs  python.rs  thermal.rs  throttling.rs
crates/pi-doctor-probes/tests/: hardware_matrix.rs  parser_properties.rs
crates/pi-doctor-report/: Cargo.toml
crates/pi-doctor-report/src/: error.rs  human.rs  json.rs  lib.rs
crates/pi-doctor-report/tests/: json_schema.rs
debian/: README.source  changelog  control  copyright  docs  manpages  pi-doctor.1  rules  watch
docs/: cli-contract.md  development.md  exit-codes.md  getting-started.md  hardware-matrix.md  index.md  (+6 more)
(+62 files in other folders)
