[workspace]
members = [
    "crates/pi-doctor-bundle",
    "crates/pi-doctor-cli",
    "crates/pi-doctor-core",
    "crates/pi-doctor-probes",
    "crates/pi-doctor-report",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
version = "1.0.0"
repository = "https://github.com/Halfblood-Prince/pi-doctor"
homepage = "https://github.com/Halfblood-Prince/pi-doctor"
description = "Human-first Raspberry Pi diagnostics"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
env_logger = "0.11"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
