[package]
name = "pi-doctor-probes"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[dependencies]
log.workspace = true
pi-doctor-core = { path = "../pi-doctor-core" }
thiserror.workspace = true
