[package]
name = "pi-doctor-report"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[dependencies]
pi-doctor-core = { path = "../pi-doctor-core" }
serde_json.workspace = true
thiserror.workspace = true
